--- a/README
+++ b/README
@@ -6,16 +6,18 @@ What it is doing:
   - Import is incremental -- keeps user in the loop and continues where it left off
   - Includes basic image import
   - Uses WP's own text formatting functions so everything comes through looking like a paragraph, etc
+  - Pages and post import to different pages, and use different page types if selected
+  - Page parent/child relations kept
+  - Imports Wordpress Categories to the attribute 'wordpress_categories' - no nested categories, but the category name is kept
+  - Imports Wordpress Tags to the 'tags' attribute
+  - Removes all blocks from "Main" and "Blog Post More" areas on newly created pages to keep lipsum text from showing up
 
 Not so great:
-  - pages and posts import under the same page
   - No "Start Over" on the first step.  Choosing a new database when you have existing records doesn't do anything so the dialog shouldn't be there.
   - Not selecting a page to import under is very bad. Hundreds of pages show up under "home" and the link does not work at the WORDPRESSED step.
     - Should not proceed if "Posts" are going under Home. This basically ruins a site.
   - icon.png does not look good
 
 Would be nice:
-  - Have an option to import "posts" under one page and "pages" under another.
   - Option to import just posts or just pages.
-  - Include a new page type called "WordPress Post" that is basically the "Blog" page type but without the lipsum text.
   - some kind of rudimentary support for image captions, like <div class="wp-import-image"> <img /> <span class="wp-import-caption">caption</span></div>
