--- a/README
+++ b/README
@@ -21,3 +21,5 @@ Not so great:
 Would be nice:
   - Option to import just posts or just pages.
   - some kind of rudimentary support for image captions, like <div class="wp-import-image"> <img /> <span class="wp-import-caption">caption</span></div>
+  - Somehow keep post url structure, or update internal links in post content
+  - Better import of images, script as is tries to import flickr images that probably shouldn't be imported
