--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Wordpress Importer does a basic import of a wordpress blog.
+Wordpress Importer does a basic import of a wordpress blog.....
 The main idea is that someone can take their old content and have it represented on a concrete5 site.
 
 What it is doing:
